[package]
name = "tbc"
version = "0.3.0"
authors = ["Dmitry Stepanov <d1maxa@yandex.ru>"]
edition = "2018"
license = "MIT"
description = "Texture Block Compression (BCn)"
keywords = ["compression", "bc1", "bc3", "bc4"]
include = ["/src/**/*", "/Cargo.toml", "/LICENSE", "/README.md"]
repository = "https://github.com/mrDIMAS/tbc"
readme = "README.md"